Fix getFirst and getLast bug